cambios combo/botones

--- a/app/src/main/res/layout/activity_adjuntos.xml
+++ b/app/src/main/res/layout/activity_adjuntos.xml
@@ -31,12 +31,14 @@
         <android.support.design.widget.TextInputLayout
             android:id="@+id/tmpVin"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@drawable/border_edittext">
             <EditText
                 android:id="@+id/edtVin"
                 android:textSize="10sp"
                 android:layout_marginLeft="5dp"
                 android:hint="Seleccione file.."
+
                 android:layout_width="180dp"
                 android:layout_height="wrap_content" />
         </android.support.design.widget.TextInputLayout>
@@ -67,7 +69,8 @@
         <android.support.design.widget.TextInputLayout
             android:id="@+id/tmpKmHoras"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@drawable/border_edittext">
 
             <EditText
                 android:id="@+id/edtKmHoras"
@@ -86,6 +89,9 @@
 
 
     <Button
+        android:background="@drawable/button_motored"
+        android:textColor="#ffffff"
+        android:textStyle="bold"
         android:onClick="agregaFiles"
         android:layout_marginTop="10dp"
         android:layout_gravity="center"
