--- a/app/src/main/res/layout/activity_analisis_causa_falla.xml
+++ b/app/src/main/res/layout/activity_analisis_causa_falla.xml
@@ -9,6 +9,9 @@
     tools:context="com.movil.summmit.motorresapp.AnalisisCausaFallaActivity">
     
     <Button
+        android:background="@drawable/button_motored"
+        android:textColor="#ffffff"
+        android:textStyle="bold"
         android:id="@+id/addDetalleCausaFalla"
         android:textAlignment="textEnd"
         android:layout_width="wrap_content"
