--- a/app/src/main/res/layout/activity_conclusiones_recomendaciones.xml
+++ b/app/src/main/res/layout/activity_conclusiones_recomendaciones.xml
@@ -37,10 +37,17 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <Button
+                            android:background="@drawable/button_motored"
+                            android:textColor="#ffffff"
+                            android:textStyle="bold"
                             android:id="@+id/btnConclusiones"
                             android:text="Agregar"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="1dp"/>
                         <EditText
                             android:id="@+id/edtConclusiones"
                             android:layout_marginLeft="4dp"
