--- a/app/src/main/res/layout/activity_guardar_enviar.xml
+++ b/app/src/main/res/layout/activity_guardar_enviar.xml
@@ -15,6 +15,9 @@
         android:layout_height="wrap_content">
 
         <Button
+            android:background="@drawable/button_motored"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
             android:id="@+id/btnGuardar"
             android:onClick="finalizar"
             android:layout_width="200dp"
@@ -22,6 +25,9 @@
             android:text="Guardar"/>
 
         <Button
+            android:background="@drawable/button_motored"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
             android:id="@+id/btnEnviar"
             android:onClick="finalizar"
             android:layout_marginTop="10dp"
