--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,9 @@ android:layout_height="match_parent"
             android:id="@+id/tmpUser"
             android:layout_marginTop="100dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@drawable/border_edittext"
+>
             <EditText
 
                 android:layout_width="200dp"
@@ -42,29 +44,48 @@ android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="169dp" />
+            <View
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="1dp"/>
         </android.support.design.widget.TextInputLayout>
 
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="10dp"/>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/tmpPass"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@drawable/border_edittext">
+            <View
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="1dp"/>
             <EditText
+                android:id="@+id/etePassword"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:hint="Password"
-                android:id="@+id/etePassword"
+                android:layout_centerHorizontal="true"
                 android:layout_marginBottom="10dp"
-                android:layout_centerHorizontal="true" />
+                android:hint="Password"
+                android:inputType="textPassword" />
         </android.support.design.widget.TextInputLayout>
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="10dp"/>
 
 
         <Button
+            android:background="@drawable/button_motored"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:background="#D5EDED"
             android:text="Ingresar"
             android:id="@+id/btnLogin"
             android:onClick="Logueo"
