--- a/app/src/main/res/layout/item_lista_informe.xml
+++ b/app/src/main/res/layout/item_lista_informe.xml
@@ -66,11 +66,22 @@
                 android:text="Modelo: C450"/>
 
             <Button
+
+                android:background="@drawable/button_motored"
+                android:textColor="#ffffff"
+                android:textStyle="bold"
                 android:layout_marginLeft="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Editar"/>
+            <View
+                android:layout_width="10dp"
+                android:layout_weight="1"
+                android:layout_height="20dp"/>
             <Button
+                android:background="@drawable/button_motored"
+                android:textColor="#ffffff"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Ver"/>
