--- a/app/src/main/res/layout/spinner.xml
+++ b/app/src/main/res/layout/spinner.xml
@@ -4,10 +4,11 @@
     android:layout_height="wrap_content"
     android:padding="5dp"
     android:textAlignment="gravity"
-    android:spinnerMode="dropdown"
+    android:spinnerMode="dialog"
     android:background="@android:color/transparent"
+    style="@style/Widget.AppCompat.DropDownItem.Spinner"
     android:layout_centerVertical="true"
     android:textSize="14sp"
     android:layout_marginLeft="5dp"
-    android:textColor="#3684D7"
+    android:textColor="#ffffff"
      />
