--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:width="0dp"
-        android:color="@android:color/holo_blue_dark" />
+        android:width="2dp"
+        android:color="@android:color/widget_edittext_dark" />
 </shape>
