--- a/app/src/main/res/layout/activity_detail_informe_tecnico.xml
+++ b/app/src/main/res/layout/activity_detail_informe_tecnico.xml
@@ -15,20 +15,24 @@
         android:gravity="center">
 
         <LinearLayout
-            android:background="@drawable/border"
+
             android:layout_width="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
             android:layout_height="wrap_content">
             <TextView
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Empresa"/>
 
             <TextView
+
                 android:id="@+id/txvEmpresa"
                 android:layout_width="180dp"
-                android:layout_height="wrap_content">
+                android:layout_height="30dp"
+                android:background="@drawable/border_edittext"
+                >
 
             </TextView>
 
@@ -36,7 +40,7 @@
         </LinearLayout>
         <LinearLayout
             android:layout_marginLeft="5dp"
-            android:background="@drawable/border"
+
             android:gravity="center"
             android:layout_width="wrap_content"
             android:orientation="vertical"
@@ -49,9 +53,12 @@
 
 
             <TextView
+
                 android:id="@+id/txvSucursal"
                 android:layout_width="180dp"
-                android:layout_height="wrap_content">
+                android:layout_height="30dp"
+                android:background="@drawable/border_edittext"
+                >
 
             </TextView>
 
@@ -69,7 +76,7 @@
         android:gravity="center">
 
         <LinearLayout
-            android:background="@drawable/border"
+
             android:gravity="center"
             android:layout_width="wrap_content"
             android:orientation="vertical"
@@ -83,13 +90,14 @@
             <TextView
                 android:id="@+id/txvArea"
                 android:layout_width="180dp"
-                android:layout_height="wrap_content"></TextView>
+                android:layout_height="30dp"
+                android:background="@drawable/border_edittext"></TextView>
 
 
         </LinearLayout>
         <LinearLayout
             android:layout_marginLeft="5dp"
-            android:background="@drawable/border"
+
             android:layout_width="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
@@ -101,7 +109,8 @@
             <TextView
                 android:id="@+id/txvNroOT"
                 android:layout_width="180dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="30dp"
+                android:background="@drawable/border_edittext" />
 
 
         </LinearLayout>
@@ -116,7 +125,7 @@
         android:gravity="center">
 
         <LinearLayout
-            android:background="@drawable/border"
+
             android:gravity="center"
             android:layout_width="wrap_content"
             android:orientation="vertical"
@@ -129,13 +138,14 @@
             <TextView
                 android:id="@+id/txvMarca"
                 android:layout_width="180dp"
-                android:layout_height="wrap_content"></TextView>
+                android:layout_height="30dp"
+                android:background="@drawable/border_edittext"></TextView>
 
 
         </LinearLayout>
         <LinearLayout
             android:layout_marginLeft="5dp"
-            android:background="@drawable/border"
+
             android:gravity="center"
             android:layout_width="wrap_content"
             android:orientation="vertical"
@@ -148,7 +158,8 @@
             <TextView
                 android:id="@+id/txvModelo"
                 android:layout_width="180dp"
-                android:layout_height="wrap_content"></TextView>
+                android:layout_height="30dp"
+                android:background="@drawable/border_edittext"></TextView>
 
 
         </LinearLayout>
@@ -163,7 +174,7 @@
         android:gravity="center">
 
         <LinearLayout
-            android:background="@drawable/border"
+
             android:gravity="center"
             android:layout_width="wrap_content"
             android:orientation="vertical"
@@ -176,13 +187,14 @@
             <TextView
                 android:id="@+id/txvCliente"
                 android:layout_width="240dp"
-                android:layout_height="wrap_content"></TextView>
+                android:layout_height="30dp"
+                android:background="@drawable/border_edittext"></TextView>
 
 
         </LinearLayout>
         <LinearLayout
             android:layout_marginLeft="5dp"
-            android:background="@drawable/border"
+
             android:gravity="center"
             android:layout_width="wrap_content"
             android:orientation="vertical"
@@ -195,7 +207,8 @@
             <TextView
                 android:id="@+id/txvVin"
                 android:layout_width="120dp"
-                android:layout_height="wrap_content"></TextView>
+                android:layout_height="30dp"
+                android:background="@drawable/border_edittext"></TextView>
 
 
         </LinearLayout>
@@ -210,7 +223,7 @@
         android:gravity="center">
 
         <LinearLayout
-            android:background="@drawable/border"
+
             android:gravity="center"
             android:layout_width="wrap_content"
             android:orientation="vertical"
@@ -223,13 +236,14 @@
             <TextView
                 android:id="@+id/txvKm"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content"></TextView>
+                android:layout_height="30dp"
+                android:background="@drawable/border_edittext"></TextView>
 
 
         </LinearLayout>
         <LinearLayout
             android:layout_marginLeft="5dp"
-            android:background="@drawable/border"
+
             android:gravity="center"
             android:layout_width="wrap_content"
             android:orientation="vertical"
@@ -242,13 +256,14 @@
             <TextView
                 android:id="@+id/txvHorom"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content"></TextView>
+                android:layout_height="30dp"
+                android:background="@drawable/border_edittext"></TextView>
 
 
         </LinearLayout>
         <LinearLayout
             android:layout_marginLeft="5dp"
-            android:background="@drawable/border"
+
             android:gravity="center"
             android:layout_width="wrap_content"
             android:orientation="vertical"
@@ -261,7 +276,8 @@
             <TextView
                 android:id="@+id/txvComponente"
                 android:layout_width="160dp"
-                android:layout_height="wrap_content"></TextView>
+                android:layout_height="30dp"
+                android:background="@drawable/border_edittext"></TextView>
 
 
         </LinearLayout>
@@ -275,7 +291,7 @@
         android:gravity="center">
 
         <LinearLayout
-            android:background="@drawable/border"
+
             android:gravity="center"
             android:layout_width="wrap_content"
             android:orientation="vertical"
@@ -288,13 +304,14 @@
             <TextView
                 android:id="@+id/txvSerie"
                 android:layout_width="80dp"
-                android:layout_height="wrap_content"></TextView>
+                android:layout_height="30dp"
+                android:background="@drawable/border_edittext"></TextView>
 
 
         </LinearLayout>
         <LinearLayout
             android:layout_marginLeft="5dp"
-            android:background="@drawable/border"
+
             android:gravity="center"
             android:layout_width="wrap_content"
             android:orientation="vertical"
@@ -307,13 +324,14 @@
             <TextView
                 android:id="@+id/txvAplicacion"
                 android:layout_width="160dp"
-                android:layout_height="wrap_content"></TextView>
+                android:layout_height="30dp"
+                android:background="@drawable/border_edittext"></TextView>
 
 
         </LinearLayout>
         <LinearLayout
             android:layout_marginLeft="5dp"
-            android:background="@drawable/border"
+
             android:gravity="center"
             android:layout_width="wrap_content"
             android:orientation="vertical"
@@ -326,7 +344,8 @@
             <TextView
                 android:id="@+id/txvFechaGarantia"
                 android:layout_width="120dp"
-                android:layout_height="wrap_content"></TextView>
+                android:layout_height="30dp"
+                android:background="@drawable/border_edittext"></TextView>
 
 
         </LinearLayout>
@@ -346,7 +365,7 @@
             android:gravity="center">
 
             <LinearLayout
-                android:background="@drawable/border"
+
                 android:gravity="center"
                 android:layout_width="wrap_content"
                 android:orientation="vertical"
@@ -360,7 +379,8 @@
                 <TextView
                     android:id="@+id/txvFechaFalla"
                     android:layout_width="160dp"
-                    android:layout_height="wrap_content"></TextView>
+                    android:layout_height="30dp"
+                    android:background="@drawable/border_edittext"></TextView>
 
 
             </LinearLayout>
@@ -376,7 +396,7 @@
         android:gravity="center">
 
         <LinearLayout
-            android:background="@drawable/border"
+
             android:layout_width="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
@@ -390,6 +410,7 @@
                 android:id="@+id/txvReclamo"
                 android:inputType="textMultiLine"
                 android:gravity="left|top"
+                android:background="@drawable/border_edittext"
                 android:layout_width="370dp"
                 android:layout_height="40dp">
 
