--- a/app/src/main/res/layout/activity_nuevo_informe.xml
+++ b/app/src/main/res/layout/activity_nuevo_informe.xml
@@ -28,7 +28,7 @@
         android:gravity="center">
 
         <LinearLayout
-            android:background="@drawable/border"
+           
             android:layout_width="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
@@ -42,15 +42,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <Spinner
+                    style="@style/spinner_style"
                     android:id="@+id/spnEmpresa"
                     android:layout_width="151dp"
                     android:layout_height="wrap_content"></Spinner>
+                    style="@style/spinner_style">
             </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
         <LinearLayout
             android:layout_marginLeft="5dp"
-            android:background="@drawable/border"
+
             android:gravity="center"
             android:layout_width="wrap_content"
             android:orientation="vertical"
@@ -65,9 +67,11 @@
                 android:id="@+id/tmpSucursal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
+
                 <Spinner
                     android:id="@+id/spnSucursal"
-                    android:layout_width="180dp"
+                    style="@style/spinner_style"
+                    android:layout_width="136dp"
                     android:layout_height="wrap_content"></Spinner>
             </android.support.design.widget.TextInputLayout>
 
@@ -85,9 +89,9 @@
         android:gravity="center">
 
         <LinearLayout
-            android:layout_width="151dp"
+            android:layout_width="167dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/border"
+
             android:gravity="center"
             android:orientation="vertical">
 
@@ -98,19 +102,20 @@
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tmpArea"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <Spinner
                     android:id="@+id/spnArea"
-                    android:layout_width="151dp"
+                    style="@style/spinner_style"
+                    android:layout_width="154dp"
                     android:layout_height="wrap_content"></Spinner>
             </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
         <LinearLayout
             android:layout_marginLeft="5dp"
-            android:background="@drawable/border"
+
 
             android:layout_width="wrap_content"
             android:orientation="vertical"
@@ -138,9 +143,9 @@
         android:gravity="center">
 
         <LinearLayout
-            android:layout_width="154dp"
+            android:layout_width="170dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/border"
+
             android:gravity="center"
             android:orientation="vertical">
 
@@ -151,11 +156,12 @@
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tmpMarca"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <Spinner
                     android:id="@+id/spnMarca"
+                    style="@style/spinner_style"
                     android:layout_width="151dp"
                     android:layout_height="wrap_content"></Spinner>
             </android.support.design.widget.TextInputLayout>
@@ -163,7 +169,7 @@
         </LinearLayout>
         <LinearLayout
             android:layout_marginLeft="5dp"
-            android:background="@drawable/border"
+
             android:gravity="center"
             android:layout_width="wrap_content"
             android:orientation="vertical"
@@ -176,9 +182,11 @@
                 android:id="@+id/tmpModelo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
+
                 <Spinner
                     android:id="@+id/spnModelo"
-                    android:layout_width="180dp"
+                    style="@style/spinner_style"
+                    android:layout_width="140dp"
                     android:layout_height="wrap_content"></Spinner>
             </android.support.design.widget.TextInputLayout>
 
@@ -187,42 +195,47 @@
     </LinearLayout>
 
 
-
-
-
             <LinearLayout
-                android:padding="5dp"
-                android:layout_width="wrap_content"
+                android:layout_width="375dp"
+                android:layout_height="84dp"
+                android:gravity="center"
                 android:orientation="horizontal"
-                android:layout_height="wrap_content"
-                android:gravity="center">
+                android:padding="5dp">
+
+                <View
+                    android:layout_width="43dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="1" />
 
                 <LinearLayout
-                    android:layout_marginLeft="12dp"
-                    android:background="@drawable/border"
+                    android:layout_width="422dp"
+                    android:layout_height="125dp"
+                    android:layout_marginLeft="-6dp"
+
                     android:gravity="center"
-                    android:layout_width="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_height="wrap_content">
+                    android:orientation="vertical">
+
 
                     <TextView
+
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Cliente"/>
+                        android:text="Cliente" />
+
+
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/tmpCliente"
-                        android:layout_width="wrap_content"
+                        android:layout_width="346dp"
                         android:layout_height="wrap_content">
-                        <View
-                            android:layout_width="43dp"
-                            android:layout_height="1dp"
-                            android:layout_weight="1" />
+
                         <Spinner
                             android:id="@+id/spnCliente"
-                            android:layout_width="320dp"
+                            style="@style/spinner_style"
+                            android:layout_width="333dp"
                             android:layout_height="wrap_content"></Spinner>
 
                     </android.support.design.widget.TextInputLayout>
+
 
                 </LinearLayout>
 
@@ -231,16 +244,16 @@
 
 
             <LinearLayout
-                android:layout_width="321dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="87dp"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:padding="5dp">
 
                 <LinearLayout
-                    android:layout_width="99dp"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/border"
+                    android:layout_width="126dp"
+                    android:layout_height="82dp"
+
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -251,13 +264,14 @@
 
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/tmpVin"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
                         <Spinner
                             android:id="@+id/spnVin"
-                            android:layout_width="90dp"
-                            android:layout_height="wrap_content"></Spinner>
+                            style="@style/spinner_style"
+                            android:layout_width="113dp"
+                            android:layout_height="40dp"></Spinner>
                     </android.support.design.widget.TextInputLayout>
 
                 </LinearLayout>
@@ -266,18 +280,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
-                    android:background="@drawable/border"
+
                     android:gravity="center"
                     android:orientation="vertical">
 
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/tmpKm"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/border_edittext">
 
                         <EditText
                             android:id="@+id/edtKm"
-                            android:layout_width="77dp"
+                            android:layout_width="87dp"
                             android:layout_height="wrap_content"
                             android:hint="Km"
                             android:inputType="numberDecimal"></EditText>
@@ -290,13 +305,14 @@
                     android:layout_height="wrap_content"
 
                     android:layout_marginLeft="5dp"
-                    android:background="@drawable/border"
+
                     android:orientation="vertical">
 
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/tmpHorometro"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_width="120dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/border_edittext">
 
                         <EditText
                             android:id="@+id/edtHorometro"
@@ -320,7 +336,7 @@
                 android:gravity="center">
 
                 <LinearLayout
-                    android:background="@drawable/border"
+
                     android:gravity="center"
                     android:layout_width="wrap_content"
                     android:orientation="vertical"
@@ -334,6 +350,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
                         <Spinner
+                            style="@style/spinner_style"
                             android:id="@+id/spnComponente"
                             android:layout_width="180dp"
                             android:layout_height="wrap_content"></Spinner>
@@ -342,7 +359,7 @@
                 </LinearLayout>
                 <LinearLayout
                     android:layout_marginLeft="3dp"
-                    android:background="@drawable/border"
+                    android:background="@drawable/border_edittext"
                     android:layout_width="wrap_content"
                     android:orientation="vertical"
                     android:layout_height="wrap_content">
@@ -371,7 +388,7 @@
                 android:gravity="center">
 
                 <LinearLayout
-                    android:background="@drawable/border"
+
                     android:gravity="center"
                     android:layout_width="wrap_content"
                     android:orientation="vertical"
@@ -387,6 +404,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
                         <Spinner
+                            style="@style/spinner_style"
                             android:id="@+id/spnAplicacion"
                             android:layout_width="180dp"
                             android:layout_height="wrap_content"></Spinner>
@@ -397,6 +415,8 @@
                     android:layout_marginLeft="5dp"
                     android:layout_width="wrap_content"
                     android:orientation="vertical"
+                    android:background="@drawable/border_edittext"
+
                     android:layout_height="wrap_content">
                     <TextView
                         android:layout_width="wrap_content"
@@ -417,7 +437,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <LinearLayout
-                    android:background="@drawable/border"
+                   
                     android:gravity="center"
                     android:layout_width="wrap_content"
                     android:orientation="vertical"
@@ -445,7 +465,9 @@
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/tmpReclamo"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/border_edittext"
+                        >
 
                         <EditText
                             android:id="@+id/edtReclamo"
@@ -461,6 +483,9 @@
             </LinearLayout>
 
             <Button
+                android:background="@drawable/button_motored"
+                android:textColor="#ffffff"
+                android:textStyle="bold"
                 android:id="@+id/addAntecedente"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
