--- a/app/src/main/res/layout/layout_dialog_detallecausa_falla.xml
+++ b/app/src/main/res/layout/layout_dialog_detallecausa_falla.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:background="@drawable/border"
+       
         android:layout_gravity="center"
         android:layout_width="330dp"
         android:layout_height="wrap_content">
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:text="Tecnicos:"/>
         <Spinner
+
             android:entries="@array/opciones_arrays"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"></Spinner>
@@ -35,7 +36,7 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:background="@drawable/border"
+           
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -54,7 +55,7 @@
 
         <LinearLayout
             android:layout_marginLeft="5dp"
-            android:background="@drawable/border"
+           
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -77,7 +78,7 @@
 
         <LinearLayout
             android:layout_marginLeft="5dp"
-            android:background="@drawable/border"
+           
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -199,8 +200,15 @@
                         android:layout_height="wrap_content">
                         <Button
                             android:text="Agregar"
+                            android:background="@drawable/button_motored"
+                            android:textColor="#ffffff"
+                            android:textStyle="bold"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="1dp"/>
                         <EditText
                             android:layout_marginLeft="4dp"
                             android:background="@drawable/border_edittext"
