--- a/app/src/main/res/layout/layout_dialog_tecnicos.xml
+++ b/app/src/main/res/layout/layout_dialog_tecnicos.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/vw_BgRv"
         android:textSize="23sp"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
