cambios de combos

--- a/app/src/main/res/layout/spinner.xml
+++ b/app/src/main/res/layout/spinner.xml
@@ -11,4 +11,5 @@
     android:textSize="14sp"
     android:layout_marginLeft="5dp"
     android:textColor="#ffffff"
+    android:textStyle="bold"
      />
